--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   flutter_localizations:
     sdk: flutter
+
+  intl: ^0.16.0
 
 
   # The following adds the Cupertino Icons font to your application.
